js/js.translator/testData/incremental/invalidationWithPL/interfaceBecomeClass/main/klass.6.kt
class Klass: Bar() {
    override fun getSomething() = super.getSomething()
}
